--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"feather-icons": "^4.28.0",
 		"frappe-ui": "^0.1.65",
+		"lucide-vue-next": "^0.427.0",
 		"vue": "^3.4.12",
 		"vue-router": "^4.2.2"
 	},
