--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,9 @@
 		"serve": "vite preview"
 	},
 	"dependencies": {
+		"@vueuse/core": "^10.11.1",
 		"feather-icons": "^4.28.0",
-		"frappe-ui": "^0.1.65",
+		"frappe-ui": "^0.1.66",
 		"lucide-vue-next": "^0.427.0",
 		"vue": "^3.4.12",
 		"vue-router": "^4.2.2"
