--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.1.8",
 		"tailwindcss": "^3.4.3",
+		"typescript": "^5.5.4",
 		"vite": "^4.4.9"
 	}
 }
