--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "frappe-ui-frontend",
+	"name": "studio-ui",
 	"private": true,
 	"version": "0.0.0",
 	"scripts": {
@@ -9,25 +9,25 @@
 		"serve": "vite preview"
 	},
 	"dependencies": {
+		"@vitejs/plugin-vue": "^4.2.3",
 		"@vueuse/components": "^10.11.1",
 		"@vueuse/core": "^10.11.1",
+		"autoprefixer": "^10.4.2",
 		"feather-icons": "^4.28.0",
 		"frappe-ui": "^0.1.66",
 		"lucide-vue-next": "^0.427.0",
 		"pinia": "^2.2.1",
+		"vite": "^4.4.9",
 		"vue": "^3.4.12",
 		"vue-router": "^4.2.2"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-vue": "^4.2.3",
-		"autoprefixer": "^10.4.2",
 		"eslint": "^8.39.0",
 		"eslint-plugin-vue": "^9.11.0",
 		"postcss": "^8.4.5",
-		"prettier": "^2.8.8",
-		"prettier-plugin-tailwindcss": "^0.1.8",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.6",
 		"tailwindcss": "^3.4.3",
-		"typescript": "^5.5.4",
-		"vite": "^4.4.9"
+		"typescript": "^5.5.4"
 	}
 }
