--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 		"@vitejs/plugin-vue": "^4.2.3",
 		"@vueuse/components": "^10.11.1",
 		"@vueuse/core": "^10.11.1",
+		"ace-builds": "^1.36.2",
 		"autoprefixer": "^10.4.2",
 		"feather-icons": "^4.28.0",
 		"frappe-ui": "^0.1.66",
