--- a/studio/studio/doctype/studio_app_page/studio_app_page.json
+++ b/studio/studio/doctype/studio_app_page/studio_app_page.json
@@ -6,14 +6,14 @@
  "editable_grid": 1,
  "engine": "InnoDB",
  "field_order": [
-  "screen"
+  "studio_page"
  ],
  "fields": [
   {
-   "fieldname": "screen",
+   "fieldname": "studio_page",
    "fieldtype": "Link",
    "in_list_view": 1,
-   "label": "Screen",
+   "label": "Studio Page",
    "options": "Studio Page",
    "reqd": 1
   }
@@ -21,10 +21,10 @@
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2024-09-25 21:01:34.260435",
+ "modified": "2024-09-26 18:57:22.161631",
  "modified_by": "Administrator",
  "module": "Studio",
- "name": "Studio App Screen",
+ "name": "Studio App Page",
  "owner": "Administrator",
  "permissions": [],
  "sort_field": "creation",
