build(tsconfig): set noEmit & noErrorTruncation to true

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,6 +8,8 @@
 	  "moduleResolution": "node",
 	  "experimentalDecorators": true,
 	  "skipLibCheck": true,
+	  "noErrorTruncation": true,
+	  "noEmit": true,
 	  "esModuleInterop": true,
 	  "allowSyntheticDefaultImports": true,
 	  "forceConsistentCasingInFileNames": true,
