--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
 		"build": "vite build --base=/assets/studio/frontend/ && yarn copy-html-entry",
 		"copy-html-entry": "cp ../studio/public/frontend/index.html ../studio/www/studio.html",
 		"serve": "vite preview",
-		"extract-frappeui-types": "node src/scripts/tsToJSONGenerator.mjs frappe-ui",
-		"extract-studio-types": "node src/scripts/tsToJSONGenerator.mjs studio"
+		"extract-frappeui-types": "tsx src/scripts/tsToJSONGenerator.ts frappe-ui",
+		"extract-studio-types": "tsx src/scripts/tsToJSONGenerator.ts studio"
 	},
 	"dependencies": {
 		"@vitejs/plugin-vue": "^4.2.3",
@@ -17,7 +17,7 @@
 		"ace-builds": "^1.36.2",
 		"autoprefixer": "^10.4.2",
 		"feather-icons": "^4.28.0",
-		"frappe-ui": "^0.1.69",
+		"frappe-ui": "0.1.72",
 		"lucide-vue-next": "^0.427.0",
 		"pinia": "^2.2.1",
 		"ts-json-schema-generator": "^2.3.0",
@@ -33,6 +33,7 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"tailwindcss": "^3.4.3",
+		"tsx": "^4.19.2",
 		"typescript": "^5.5.4"
 	}
 }
