feat(TS to JSON): add custom parser for SVGElement
- consider SVGElement as string in the parser as the JSON schema expands the entire definition which is unnecessary

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -33,8 +33,9 @@
 	  "src/**/*.vue",
 	  "tests/**/*.ts",
 	  "tests/**/*.tsx",
-	  "src/scripts/tsToJSONGenerator.mjs",
-	  "src/utils/tsToJSON.mjs"
+	  "src/scripts/tsToJSONGenerator.ts",
+	  "src/utils/tsToJSON/index.ts",
+	  "src/utils/tsToJSON/customParser.ts"
 	],
 	"exclude": [
 	  "node_modules"
