--- a/frontend/src/json_types/studio/AppHeader.json
+++ b/frontend/src/json_types/studio/AppHeader.json
@@ -2,23 +2,18 @@
   "$schema": "http://json-schema.org/draft-07/schema#",
   "type": "object",
   "properties": {
-    "imageURL": {
-      "type": "string"
-    },
     "title": {
       "type": "string"
     },
-    "subtitle": {
+    "logoSVG": {
       "type": "string"
     },
-    "route": {
-      "type": "string"
+    "hideLogo": {
+      "type": "boolean"
+    },
+    "hideBackButton": {
+      "type": "boolean"
     }
   },
-  "required": [
-    "imageURL",
-    "title",
-    "subtitle"
-  ],
   "definitions": {}
 }
