--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,6 @@
 		"frappe-ui": "0.1.72",
 		"lucide-vue-next": "^0.427.0",
 		"pinia": "^2.2.1",
-		"ts-json-schema-generator": "^2.3.0",
 		"vite": "^4.4.9",
 		"vue": "^3.4.12",
 		"vue-router": "^4.2.2",
@@ -34,6 +33,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"tailwindcss": "^3.4.3",
 		"tsx": "^4.19.2",
-		"typescript": "^5.5.4"
+		"typescript": "^5.5.4",
+		"ts-json-schema-generator": "^2.3.0"
 	}
 }
