--- a/frontend/src/json_types/studio/AppHeader.json
+++ b/frontend/src/json_types/studio/AppHeader.json
@@ -1,19 +1,24 @@
 {
   "$schema": "http://json-schema.org/draft-07/schema#",
-  "type": "object",
-  "properties": {
-    "title": {
-      "type": "string"
-    },
-    "logoSVG": {
-      "type": "string"
-    },
-    "hideLogo": {
-      "type": "boolean"
-    },
-    "hideBackButton": {
-      "type": "boolean"
+  "$ref": "#/definitions/AppHeaderProps",
+  "definitions": {
+    "AppHeaderProps": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string"
+        },
+        "logoSVG": {
+          "type": "string"
+        },
+        "hideLogo": {
+          "type": "boolean"
+        },
+        "hideBackButton": {
+          "type": "boolean"
+        }
+      },
+      "additionalProperties": false
     }
-  },
-  "definitions": {}
+  }
 }
