--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
 		"vite": "^4.4.9",
 		"vue": "^3.4.12",
 		"vue-router": "^4.2.2",
-		"vuedraggable": "^4.1.0"
+		"vuedraggable": "^4.1.0",
+		"vue-sonner": "^1.3.0"
 	},
 	"devDependencies": {
 		"eslint": "^8.39.0",
