--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,13 @@
 		"feather-icons": "^4.28.0",
 		"frappe-ui": "0.1.108",
 		"lucide-vue-next": "^0.468.0",
+		"marked": "^15.0.6",
 		"pinia": "^2.2.1",
 		"vite": "^5.4.11",
 		"vue": "^3.4.12",
 		"vue-router": "^4.2.2",
-		"vuedraggable": "^4.1.0",
-		"vue-sonner": "^1.3.0"
+		"vue-sonner": "^1.3.0",
+		"vuedraggable": "^4.1.0"
 	},
 	"devDependencies": {
 		"eslint": "^8.39.0",
@@ -33,8 +34,8 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"tailwindcss": "^3.4.3",
+		"ts-json-schema-generator": "^2.3.0",
 		"tsx": "^4.19.2",
-		"typescript": "^5.5.4",
-		"ts-json-schema-generator": "^2.3.0"
+		"typescript": "^5.5.4"
 	}
 }
