chore: export python type annotations for doctypes

--- a/studio/studio/doctype/studio_app/studio_app.json
+++ b/studio/studio/doctype/studio_app/studio_app.json
@@ -10,9 +10,7 @@
   "app_title",
   "route",
   "column_break_aroi",
-  "app_home",
-  "section_break_gacp",
-  "pages"
+  "app_home"
  ],
  "fields": [
   {
@@ -25,10 +23,6 @@
   {
    "fieldname": "column_break_aroi",
    "fieldtype": "Column Break"
-  },
-  {
-   "fieldname": "section_break_gacp",
-   "fieldtype": "Section Break"
   },
   {
    "fieldname": "app_home",
@@ -48,12 +42,6 @@
    "fieldname": "app_title",
    "fieldtype": "Data",
    "label": "App Title"
-  },
-  {
-   "fieldname": "pages",
-   "fieldtype": "Table",
-   "label": "Pages",
-   "options": "Studio App Page"
   }
  ],
  "index_web_pages_for_search": 1,
@@ -63,7 +51,7 @@
    "link_fieldname": "studio_app"
   }
  ],
- "modified": "2025-02-18 14:48:51.524091",
+ "modified": "2025-02-18 15:18:52.558045",
  "modified_by": "Administrator",
  "module": "Studio",
  "name": "Studio App",
