--- a/studio/studio/doctype/studio_app/studio_app.json
+++ b/studio/studio/doctype/studio_app/studio_app.json
@@ -34,8 +34,6 @@
   {
    "fieldname": "app_name",
    "fieldtype": "Data",
-   "in_list_view": 1,
-   "in_standard_filter": 1,
    "label": "App Name",
    "unique": 1
   },
@@ -48,6 +46,8 @@
    "default": "0",
    "fieldname": "published",
    "fieldtype": "Check",
+   "in_list_view": 1,
+   "in_standard_filter": 1,
    "label": "Published"
   }
  ],
@@ -58,7 +58,7 @@
    "link_fieldname": "studio_app"
   }
  ],
- "modified": "2025-03-03 12:56:04.862473",
+ "modified": "2025-03-05 16:54:27.699139",
  "modified_by": "Administrator",
  "module": "Studio",
  "name": "Studio App",
@@ -81,5 +81,6 @@
  "sort_field": "creation",
  "sort_order": "DESC",
  "states": [],
- "title_field": "app_title"
+ "title_field": "app_title",
+ "track_changes": 1
 }
