refactor: move renderer.html back to templates and use renderer.ts as the entry point
- as recommended in https://vite.dev/guide/backend-integration

- this also skips the build step to copy app renderer entry and makes the renderer somewhat faster

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,8 @@
 	"version": "0.0.0",
 	"scripts": {
 		"dev": "vite",
-		"build": "vite build --base=/assets/studio/frontend/ && yarn copy-html-entry && yarn copy-app-renderer",
+		"build": "vite build --base=/assets/studio/frontend/ && yarn copy-html-entry",
 		"copy-html-entry": "cp ../studio/public/frontend/index.html ../studio/www/studio.html",
-		"copy-app-renderer": "cp ../studio/public/frontend/renderer.html ../studio/templates/generators/renderer.html",
 		"serve": "vite preview",
 		"extract-frappeui-types": "tsx src/scripts/tsToJSONGenerator.ts frappeui",
 		"extract-studio-types": "tsx src/scripts/tsToJSONGenerator.ts studio"
