--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
 		"lucide-vue-next": "^0.468.0",
 		"marked": "^15.0.6",
 		"pinia": "^2.2.1",
+		"typescript": "^5.8.3",
 		"vite": "^5.4.11",
 		"vue": "^3.4.12",
 		"vue-router": "^4.2.2",
@@ -36,7 +37,6 @@
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"tailwindcss": "^3.4.3",
 		"ts-json-schema-generator": "^2.3.0",
-		"tsx": "^4.19.2",
-		"typescript": "^5.5.4"
+		"tsx": "^4.19.2"
 	}
 }
