--- a/studio/studio/doctype/studio_app/studio_app.json
+++ b/studio/studio/doctype/studio_app/studio_app.json
@@ -58,7 +58,7 @@
    "link_fieldname": "studio_app"
   }
  ],
- "modified": "2025-03-05 16:54:27.699139",
+ "modified": "2025-04-16 18:53:40.047892",
  "modified_by": "Administrator",
  "module": "Studio",
  "name": "Studio App",
@@ -76,8 +76,21 @@
    "role": "System Manager",
    "share": 1,
    "write": 1
+  },
+  {
+   "create": 1,
+   "delete": 1,
+   "email": 1,
+   "export": 1,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Studio User",
+   "share": 1,
+   "write": 1
   }
  ],
+ "row_format": "Dynamic",
  "sort_field": "creation",
  "sort_order": "DESC",
  "states": [],
