--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
 	"name": "studio-ui",
 	"private": true,
 	"version": "0.0.0",
+	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build --base=/assets/studio/frontend/ && yarn copy-html-entry && yarn copy-app-renderer",
