--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,17 @@
 		"extract-studio-types": "tsx src/scripts/tsToJSONGenerator.ts studio"
 	},
 	"dependencies": {
+		"@codemirror/lang-css": "^6.3.1",
+		"@codemirror/lang-html": "^6.4.9",
+		"@codemirror/lang-javascript": "^6.2.4",
+		"@codemirror/lang-json": "^6.0.1",
+		"@codemirror/lang-python": "^6.2.1",
 		"@vitejs/plugin-vue": "^5.2.0",
 		"@vueuse/components": "^10.11.1",
 		"@vueuse/core": "^10.11.1",
 		"ace-builds": "^1.36.2",
 		"autoprefixer": "^10.4.2",
+		"codemirror": "^6.0.1",
 		"feather-icons": "^4.28.0",
 		"frappe-ui": "0.1.149",
 		"lucide-vue-next": "^0.468.0",
@@ -26,6 +32,7 @@
 		"typescript": "^5.8.3",
 		"vite": "^5.4.11",
 		"vue": "^3.5.14",
+		"vue-codemirror": "^6.1.1",
 		"vue-router": "^4.2.2",
 		"vue-sonner": "^1.3.0",
 		"vuedraggable": "^4.1.0"
