--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
 		"lucide-vue-next": "^0.468.0",
 		"marked": "^15.0.6",
 		"pinia": "^2.2.1",
+		"thememirror": "^2.0.1",
 		"typescript": "^5.8.3",
 		"vite": "^5.4.11",
 		"vue": "^3.5.14",
