--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,14 +28,16 @@ repos:
       - id: ruff-format
         name: "Format Python code"
 
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
+  - repo: https://github.com/JoC0de/pre-commit-prettier
+    rev: v3.5.3
     hooks:
       - id: prettier
         types_or: [javascript, vue, scss]
         additional_dependencies:
           - prettier
           - prettier-plugin-tailwindcss
+        args:
+          - --plugin=prettier-plugin-tailwindcss
         # Ignore any files that might contain jinja / bundles
         exclude: |
             (?x)^(
