--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.2.8",
 		"tailwindcss": "^3.4.3",
-		"ts-json-schema-generator": "^2.3.0",
+		"ts-json-schema-generator": "2.3.0",
 		"tsx": "^4.19.2"
 	}
 }
