feat: add yarn scripts triggered from backend to generate app build
- added an API in Studio App for running `yarn build-studio-app`

- pass app name & components to the script

- wire the script in root package.json + frontend folder

- maintaining a separate constants.js with component names for script access because it cannot access .ts files/frappe-ui imports/fetch API

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -36,7 +36,7 @@
 	  "src/scripts/tsToJSONGenerator.ts",
 	  "src/utils/tsToJSON/index.ts",
 	  "src/utils/tsToJSON/customParser.ts"
-	],
+, "src/utils/build.js"	],
 	"exclude": [
 	  "node_modules"
 	]
