--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "scripts": {
         "postinstall": "cd frontend && yarn install",
         "dev": "cd frontend && yarn dev",
-        "build": "cd frontend && yarn build"
+        "build": "cd frontend && yarn build",
+        "build-studio-app": "cd frontend && yarn build-studio-app"
     },
     "version": "0.0.0"
 }
