fix: warning for app name missing

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -35,8 +35,9 @@
 	  "tests/**/*.tsx",
 	  "src/scripts/tsToJSONGenerator.ts",
 	  "src/utils/tsToJSON/index.ts",
-	  "src/utils/tsToJSON/customParser.ts"
-, "src/utils/build.js"	],
+	  "src/utils/tsToJSON/customParser.ts",
+	  "src/utils/build.js"
+	],
 	"exclude": [
 	  "node_modules"
 	]
