feat: add option to switch app mode - Dev / Prod
- dev mode to use the generic app renderer & faster testing, prod to generate optimised build for the app before publishing

--- a/studio/studio/doctype/studio_app/studio_app.json
+++ b/studio/studio/doctype/studio_app/studio_app.json
@@ -11,6 +11,7 @@
   "route",
   "column_break_aroi",
   "app_home",
+  "mode",
   "published"
  ],
  "fields": [
@@ -49,6 +50,13 @@
    "in_list_view": 1,
    "in_standard_filter": 1,
    "label": "Published"
+  },
+  {
+   "default": "Development",
+   "fieldname": "mode",
+   "fieldtype": "Select",
+   "label": "Mode",
+   "options": "Development\nProduction"
   }
  ],
  "index_web_pages_for_search": 1,
@@ -58,7 +66,7 @@
    "link_fieldname": "studio_app"
   }
  ],
- "modified": "2025-04-16 18:53:40.047892",
+ "modified": "2025-07-03 18:23:37.771911",
  "modified_by": "Administrator",
  "module": "Studio",
  "name": "Studio App",
