feat: allow users to set app name, fallback to title slug

--- a/studio/studio/doctype/studio_app/studio_app.json
+++ b/studio/studio/doctype/studio_app/studio_app.json
@@ -1,12 +1,13 @@
 {
  "actions": [],
  "allow_rename": 1,
+ "autoname": "field:app_name",
  "creation": "2024-09-25 20:56:56.296301",
  "doctype": "DocType",
  "engine": "InnoDB",
  "field_order": [
-  "app_name",
   "app_title",
+  "app_name",
   "route",
   "column_break_aroi",
   "app_home",
@@ -39,7 +40,8 @@
   {
    "fieldname": "app_title",
    "fieldtype": "Data",
-   "label": "App Title"
+   "label": "App Title",
+   "reqd": 1
   },
   {
    "default": "0",
@@ -57,11 +59,11 @@
    "link_fieldname": "studio_app"
   }
  ],
- "modified": "2025-07-14 12:50:59.049640",
+ "modified": "2025-07-15 10:57:08.869756",
  "modified_by": "Administrator",
  "module": "Studio",
  "name": "Studio App",
- "naming_rule": "By script",
+ "naming_rule": "By fieldname",
  "owner": "Administrator",
  "permissions": [
   {
