fix: include components.d.ts & auto-imports.d.ts in tsconfig

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -36,7 +36,9 @@
 	  "src/scripts/tsToJSONGenerator.ts",
 	  "src/utils/tsToJSON/index.ts",
 	  "src/utils/tsToJSON/customParser.ts",
-	  "src/utils/build.js"
+	  "src/utils/build.js",
+	  "./auto-imports.d.ts",
+	  "./components.d.ts"
 	],
 	"exclude": [
 	  "node_modules"
