--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 		"@codemirror/lang-javascript": "^6.2.4",
 		"@codemirror/lang-json": "^6.0.1",
 		"@codemirror/lang-python": "^6.2.1",
+		"@replit/codemirror-indentation-markers": "^6.5.3",
 		"@vitejs/plugin-vue": "^5.2.0",
 		"@vueuse/components": "^10.11.1",
 		"@vueuse/core": "^10.11.1",
